# open-vedic-calc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  EPHEMERIS_LICENSE.md  README.md  docker-compose.test.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
app/: auth.py  jobs.py  main.py  schemas.py
bphs_core/: chart.py  compat.py  dashas.py  lagna_shuddhi.py  muhurat.py  profile.py  rashi_drishti.py  special_points.py  strength.py  transits.py  utils.py  vimshopaka.py  yogas.py
ci/: check_no_proprietary_refs.py
ci/tests/: test_check_no_proprietary_refs.py  test_ci_runs_gate_regression_suite.py
scripts/: test-in-docker.ps1  test-in-docker.sh
tests/: conftest.py  test_alternatives.py  test_async_scan_jobs.py  test_auth_token.py  test_birth_date_ephemeris_range.py  test_calc_regressions.py  test_compat_deep.py  test_coord_bounds.py  test_cors_wildcard_guard.py  test_coverage.py  test_docs_disabled.py  test_edges.py  test_endpoint_limits.py  test_endpoints.py  test_family_member_string_bounds.py  test_forensic_fixes.py  test_job_store_bounded.py  test_muhurat_activities.py  test_muhurat_deep.py  test_muhurat_factors.py  test_muhurat_person_field_bounds.py  test_muhurat_score.py  test_pada_lord.py  test_paksha_bala.py  test_panchanga_fail_closed.py  test_profile.py  test_rashi_drishti.py  test_special_points_new.py  test_transit_vedha.py  test_vimshopaka.py  test_yogas_spec.py
tests/fixtures/: lagna_shuddhi_family_golden.json  lagna_shuddhi_solo_golden.json
