[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bphs-calc-service"
version = "1.0.0"
description = "Open Vedic Calc — generic BPHS calculation service"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"

dependencies = [
    "pyswisseph==2.10.3.2",
    "pyjhora>=4.8.0",
    "numpy>=1.23.0",
    "geocoder>=1.38.1",
    "timezonefinder>=6.0.0",
    "geopy>=2.4.1",
    "python-dateutil>=2.9.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bphs_core*", "app*"]

[tool.coverage.run]
branch = true
source = ["app", "bphs_core"]
omit = ["*/__pycache__/*", "tests/*"]

[tool.coverage.report]
show_missing = true
# Coverage gate for the calc-service. Raised 90 -> 92 after the edge-case
# top-ups (measured 97.82% combined line+branch, branch=true), keeping a
# comfortable buffer below actual.
fail_under = 92
